--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,29 +1,44 @@
 {
   "pages": [
+    "pages/index",
     "pages/index/index",
-    "pages/getOpenId/index",
-    "pages/getMiniProgramCode/index",
-    "pages/deployService/index",
-    "pages/createCollection/index",
-    "pages/uploadFile/index",
-    "pages/selectRecord/index",
-    "pages/updateRecord/index",
-    "pages/updateRecordResult/index",
-    "pages/updateRecordSuccess/index",
-    "pages/sumRecord/index",
-    "pages/sumRecordResult/index",
-    "pages/cloudBackend/index",
-    "pages/singleTemplate/index",
-    "pages/web/index"
+    "pages/customize/customize",
+    "pages/mine/mine"
   ],
   "window": {
-    "backgroundColor": "#F6F6F6",
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发 QuickStart",
-    "navigationBarTextStyle": "black"
+    "backgroundColor": "#fbc2eb",
+    "backgroundTextStyle": "dark",
+    "navigationBarBackgroundColor": "#a18cd1",
+    "navigationBarTitleText": "塔罗牌占卜",
+    "navigationBarTextStyle": "white",
+    "enablePullDownRefresh": true
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "/images/tabbar/index.png",
+        "selectedIconPath": "/images/tabbar/index_s.png"
+      },
+      {
+        "pagePath": "pages/customize/customize",
+        "text": "自选牌阵",
+        "iconPath": "/images/tabbar/seen.png",
+        "selectedIconPath": "/images/tabbar/seen_s.png"
+      },
+      {
+        "pagePath": "pages/mine/mine",
+        "text": "个人中心",
+        "iconPath": "/images/tabbar/personal.png",
+        "selectedIconPath": "/images/tabbar/personal_s.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json",
   "style": "v2",
-  "lazyCodeLoading": "requiredComponents"
+  "lazyCodeLoading": "requiredComponents",
+  "useExtendedLib": {
+    "weui": true
+  }
 }
