--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/customize/customize",
-    "pages/mine/mine"
+    "pages/mine/mine",
+    "pages/devine/devine"
   ],
   "window": {
     "backgroundColor": "#fbc2eb",
